--- a/contacts.html
+++ b/contacts.html
@@ -10,12 +10,17 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script type="text/javascript" src="js/loggedIn.js"></script>
     <meta charset="UTF-8">
+
+	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
 	<nav id="navbar" class="custom-nav"></nav>
+	<h1>Contacts</h1>
+	<div><button type ="add_new"><ion-icon name="add-outline"></ion-icon></button> </button></div>
+	<input placeholder="search"/>
     <div class="content-contacts">
 		<div class="table-section">
-			<h1>Contact Table</h1>
 			<div class="tbl-header">
 			<table cellpadding="0" cellspacing="0" border="0">
 				<thead>
@@ -35,228 +40,24 @@
 			<table cellpadding="0" cellspacing="0" border="0">
 				<tbody>
 				<tr>
-					<td></td>
+					<td><img src="images/sittingCat.png"/></td>
 					<td>Rachel</td>
 					<td>Vitaliano</td>
 					<td>rachelvitaliano@gmail.com</td>
 					<td>321-313-3668</td>
 					<td>1/26/2024</td>
-					<td>edit and delete button here</td>
+					<td><button class= "table_button" onclick ="edit_row()"><ion-icon name="trash-outline"></ion-icon></button>
+						<button class = "table_button"onclick="delete_row()"> <ion-icon name="create-outline"></ion-icon></button></button></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td></td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
+					<td><img src="images/blackCat.png"/></td>
+					<td>Rachel</td>
+					<td>Vitaliano</td>
+					<td>rachelvit@gmail.com</td>
+					<td>321-313-3668</td>
+					<td>1/26/2024</td>
+					<td><button class= "table_button" onclick ="edit_row()"><ion-icon name="trash-outline"></ion-icon></button>
+						<button class = "table_button"onclick="delete_row()"> <ion-icon name="create-outline"></ion-icon></button></button></td>
 				</tr>
 				</tbody>
 			</table>
