--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,6 @@
     <title>Purrfect Contacts: Contact Page</title>
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/contacts.css" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="images/" rel="images">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script type="text/javascript" src="js/loggedIn.js"></script>
@@ -17,255 +16,41 @@
 <body>
 	<nav id="navbar" class="custom-nav"></nav>
     <div class="content-contacts">
-		<div class="table-section">
-			<h1>Contact Table</h1>
-			<div class="tbl-header">
-			<table cellpadding="0" cellspacing="0" border="0">
-				<thead>
-				<tr>
-					<th>Image here</th>
-					<th>First name</th>
-					<th>Last name</th>
-					<th>Email<th> 
-					<th>Phone</th>
-					<th>Date</th>
-					<th></th>
-				</tr>
+		<div class="box">
+			<input type ="text" placeholder="search"/>
+			<a href = "a">
+				<ion-icon name="search-outline"></ion-icon>
+			</a>
+		</div>
+			<table cellspacing="0" cellpadding="0" class="table-height">
+				<thead class="tbl-header">
+					<tr>
+						<th style="width:70px;"><div>
+							<button class ="add_new test" onclick="addContactForm()"><ion-icon name="person-add-outline"></ion-icon></button></button>
+						</div></th>
+						<th>First name</th>
+						<th>Last name</th>
+						<th>Email</th> 
+						<th>Phone</th>
+						<th>Date</th>
+						<th></th>
+					</tr>
 				</thead>
 			</table>
-			</div>
-			<div class="tbl-content">
-			<table cellpadding="0" cellspacing="0" border="0">
-				<tbody>
-				<tr>
-					<td></td>
-					<td>Rachel</td>
-					<td>Vitaliano</td>
-					<td>rachelvitaliano@gmail.com</td>
-					<td>321-313-3668</td>
-					<td>1/26/2024</td>
-					<td>edit and delete button here</td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td></td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSENCO</td>
-					<td>$2.38</td>
-					<td>-0.01</td>
-					<td>-1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADELAIDE</td>
-					<td>$3.22</td>
-					<td>+0.01</td>
-					<td>+1.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>ADITYA BIRLA</td>
-					<td>$1.02</td>
-					<td>-1.01</td>
-					<td>+2.36%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>AUSTRALIAN COMPANY </td>
-					<td>$1.38</td>
-					<td>+2.01</td>
-					<td>-0.36%</td>
-					<td></td>
-				</tr>
-				</tbody>
-			</table>
+			<!-- We had to seperate the header and body into two tables
+				 The div border-container is for a nice border around the table,
+				 since if we try to apply it to the body itself, it does not work right
+				 the second div just has the overflow to scroll, so that they can scroll through
+				 their contacts. -->
+			<div class="border-container">
+			<div style="overflow:scroll;width:100%;">
+				<table cellpadding="0" cellspacing="0" class="table-height table-border">
+						<tbody id="tBody">
+						</tbody>
+				</table>
 			</div>
 		</div>
-    </div>
+	</div>
 </body>
 
 </html>
