--- a/contacts.html
+++ b/contacts.html
@@ -20,6 +20,7 @@
 <body>
 	<nav id="navbar" class="custom-nav"></nav>
     <div class="content-contacts">
+		<button onclick="loadContacts()">Load Contacts</button>
 		<div class="box">
 			<input type ="text" placeholder="search"/>
 			<a href = "a">
