--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,6 @@
 <body>
 	<nav id="navbar" class="custom-nav"></nav>
     <div class="content-contacts">
-		<button onclick="loadContacts()">Load Contacts</button>
 		<div class="box">
 			
 			<input  onkeyup=searchContacts() id = "searchText"type ="text" placeholder="search"/>
@@ -38,7 +37,8 @@
 						<th style="width:20%">Last name</th>
 						<th style="width:25%">Email</th> 
 						<th style="width:25%">Phone</th>
-						<th style="width:100px;"></th>
+						<th style="width:100px;"><button class="load_button" onclick="loadContacts()"><ion-icon name="reload-outline"></ion-icon></button>
+						</th>
 					</tr>
 				</thead>
 			</table>
