--- a/settings.html
+++ b/settings.html
@@ -17,9 +17,9 @@
             <h4 class="pb-2 border-bottom">Profile settings</h4>
             <div class="row mt-3">
                 <div class="user-display mt-4">
-                    <img scr="" class="img" alt="user photo" id="displayPicture">
+                    <img scr="" class="img mb-3" alt="user photo" id="displayPicture">
                     <p>Only upload a file type .png.</p>
-                    <button class="btn border"><b>Upload</b></button>
+                    <button class="btn border" onclick="doUploadPhoto()"><b>Upload</b></button>
                 </div>
                 <div class="user-details">
                     <div class="row mt-2">
