--- a/contacts.html
+++ b/contacts.html
@@ -49,7 +49,7 @@
 				 the second div just has the overflow to scroll, so that they can scroll through
 				 their contacts. -->
 			<div class="border-container">
-			<div style="overflow-y:scroll;width:100%;">
+			<div style="overflow-y:auto;width:100%;">
 				<table cellpadding="0" cellspacing="0" class="table-height table-border">
 						<tbody id="tBody">
 						</tbody>
